--- a/generator/template/src/styles/common.less
+++ b/generator/template/src/styles/common.less
@@ -14,3 +14,15 @@ body{
   font-size: @main-font-size;
   font-family: Arial,sans-serif;
 }
+
+.elem_no-scale {
+  flex-shrink: 0;
+  flex-grow: 0;
+}
+
+.elem_1x{
+  flex: 1;
+}
+.elem_2x{
+  flex: 2;
+}
