feat: 增加header 和 slider 的状态

--- a/generator/template/src/styles/layout.less
+++ b/generator/template/src/styles/layout.less
@@ -6,21 +6,31 @@
   display: flex;
   flex-direction: column;
 }
-.g-header{
-  background-color: @top-nav-bg-color;
-  height: @top-nav-height;
-  line-height: @top-nav-height;
-  color: #ffffff;
-}
 .g-container{
   display: flex;
   overflow: auto;
 }
 
+.g-main-content{
+  padding: @small-padding;
+}
+
+/* 侧边栏 */
 .g-slider{
   background-color: @slide-bg-color;
   padding-top: @main-padding;
   padding-bottom: @main-padding;
+  overflow: hidden;
+  // 侧边栏的宽度
+  &.g-slider_large{
+    width: @large-slide-width;
+  }
+  &.g-slider_small{
+    width: @small-slide-width;
+  }
+  &.g-slider_hidden{
+    width: @hidden-slide-width;
+  }
   .g-slider-inner{
     height: 100%;
     // reset element-ui css
@@ -29,15 +39,7 @@
     }
   }
 }
-.g-slider_large{
-  width: @large-slide-width;
-}
-.g-slider_small{
-  width: @small-slide-width;
-}
-.g-main-content{
-  padding: @small-padding;
-}
+
 
 /* header */
 
@@ -45,7 +47,17 @@
   display: flex;
   padding: 0 @main-padding;
   justify-content: space-between;
+  background-color: @top-nav-bg-color;
+  height: @top-nav-height;
+  line-height: @top-nav-height;
+  color: #ffffff;
+  overflow: hidden;
+  &.g-header_hidden{
+    height: @hidden-top-nav-height;
+    line-height: @hidden-top-nav-height;
+  }
   .logo{
+    display: inline-block;
     .logo__img{
       max-height: 70%;
       vertical-align: middle;
@@ -78,8 +90,5 @@
       bottom: 10px;
       background-color: #ffffff;
     }
-  }
-  .account-box{
-
   }
 }
