--- a/generator/template/src/styles/variables.less
+++ b/generator/template/src/styles/variables.less
@@ -11,8 +11,10 @@
 
 /*  layout */
 @top-nav-height: 60px;
+@hidden-top-nav-height:0px;
 @large-slide-width:180px;
 @small-slide-width:0px;
+@hidden-slide-width:0px;
 @slide-bg-color:#F8F8F8;
 @top-nav-bg-color: #FE9350;
 
